--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "logsync",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Logging framework for node.js",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Lo Shih <kloshih@gmail.com>",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "devDependencies": {
+    "mocha": "^5.2.0"
+  },
+  "dependencies": {
+    "sprintf": "^0.1.5",
+    "strftime": "^0.10.0"
+  }
 }
